force-app/main/default/objects/Product2/fields/ActivationKey__c.field-meta.xml
<CustomField>
    <fullName>ActivationKey__c</fullName>
    <label>ActivationKey</label>
    <length>16</length>
    <type>Text</type>
</CustomField>