force-app/main/default/objects/Product2/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>RPG</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Action role-playing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>