force-app/main/default/objects/Product2/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-player</fullName>
            </value>
            <value>
                <fullName>Multiplayer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>