force-app/main/default/objects/Product2/fields/Released__c.field-meta.xml
<CustomField>
    <fullName>Released__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set if the product was already released to the customers</description>
    <label>Released</label>
    <type>Checkbox</type>
</CustomField>