force-app/main/default/objects/Product2/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>