force-app/main/default/objects/Product2/fields/SubGenre__c.field-meta.xml
<CustomField>
    <fullName>SubGenre__c</fullName>
    <label>Sub Genre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actice</fullName>
            </value>
            <value>
                <fullName>Basket</fullName>
            </value>
            <value>
                <fullName>First Person</fullName>
            </value>
            <value>
                <fullName>Isometric</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Puzzle</fullName>
            </value>
            <value>
                <fullName>Race</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Street Fight</fullName>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Third Person</fullName>
            </value>
            <value>
                <fullName>Turn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>