force-app/main/default/objects/Product2/recordTypes/Digital.recordType-meta.xml
<RecordType>
    <fullName>Digital</fullName>
    <active>true</active>
    <label>Digital</label>
</RecordType>