force-app/main/default/objects/Product2/validationRules/CodeMustBeFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>CodeMustBeFilled</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( ProductCode )</errorConditionFormula>
    <errorMessage>Product Code Must not be empty</errorMessage>
</ValidationRule>